--- a/css/style.css
+++ b/css/style.css
@@ -66,15 +66,27 @@ background-position:center;
 }
 
 .returnal{
-    width: 300px;
+width: 300px;
 }
 
 .custom{
-    padding-top: 300px;
+padding-top: 300px;
 }
 
 .game{
-    border-radius: 30px;
+border-radius: 30px;
+}
+
+.second-hero{
+height: 750px;
+background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+background-position:center;     
+}
+
+.new-game{
+    background-color:#1f1f1f ;
 }
 
 
