--- a/css/style.css
+++ b/css/style.css
@@ -104,4 +104,14 @@ background-position:center;
     background-color:#161c3b;
 }
 
+.img-globe{
+    width: 20px;
+}
 
+.sie{
+    width: 100px;
+}
+
+footer a{
+    color:white;
+}
