--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ header{
 .nav-item a{
     display: flex;
     align-items:baseline;
-    font-weight: bold;
+    font-weight: bold; 
 }
 
 .fa-angle-down{
@@ -57,7 +57,6 @@ header{
 
 }
 
-
 /* MAIN------------  */
 
 main{
@@ -82,6 +81,7 @@ padding-top: 300px;
 
 .game{
 border-radius: 30px;
+transition:250ms;
 }
 
 .second-hero{
@@ -115,3 +115,29 @@ background-position:center;
 footer a{
     color:white;
 }
+
+
+/* HOVER E ACTIVE --------  */
+
+.btn_login:hover{
+box-shadow: 0 0 0 2px white, 0 0 0 4px #363636;
+}
+
+.btn_buy:hover{
+box-shadow: 0 0 0 2px white, 0 0 0 4px #cd3d0f;
+}
+
+.btn_info:hover{
+box-shadow: 0 0 0 2px white, 0 0 0 4px #2d64e6;
+}
+
+.btn_plus:hover{
+box-shadow: 0 0 0 2px white, 0 0 0 4px #c1bdbc;
+}
+
+.game:hover{
+transform: translateY(-20px);
+cursor: pointer; 
+}
+
+
