--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@ header{
     position: fixed;
     width: 100%; 
     z-index: 10;
+    -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+    -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+    box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 }
 
 .header-top{
@@ -33,6 +36,7 @@ header{
     border-radius: 30px;
     border:none; 
     color:white; 
+    text-decoration: none;
 }
 
 .btn_buy{
@@ -81,7 +85,7 @@ padding-top: 300px;
 
 .game{
 border-radius: 30px;
-transition:250ms;
+transition: ease-out 650ms;
 }
 
 .second-hero{
@@ -114,6 +118,16 @@ background-position:center;
 
 footer a{
     color:white;
+    text-decoration: none;
+}
+
+footer ul{
+    list-style: none;
+}
+
+.opacity{
+    opacity: 0.5;
+    border: 2px solid transparent;
 }
 
 
@@ -121,18 +135,23 @@ footer a{
 
 .btn_login:hover{
 box-shadow: 0 0 0 2px white, 0 0 0 4px #363636;
+transition: 350ms;
+color:white;
 }
 
 .btn_buy:hover{
 box-shadow: 0 0 0 2px white, 0 0 0 4px #cd3d0f;
+transition: 350ms;
 }
 
 .btn_info:hover{
 box-shadow: 0 0 0 2px white, 0 0 0 4px #2d64e6;
+transition: 350ms;
 }
 
 .btn_plus:hover{
 box-shadow: 0 0 0 2px white, 0 0 0 4px #c1bdbc;
+transition: 350ms;
 }
 
 .game:hover{
@@ -140,4 +159,12 @@ transform: translateY(-20px);
 cursor: pointer; 
 }
 
+.opacity:hover{
+    opacity: 1;
+    cursor: pointer;
+    border-bottom: 2px solid #2d64e6;
+}
 
+footer a:hover{
+    color:inherit;
+}
